# CxxBase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: utils.cmake
src/: CMakeLists.txt  cxxbase.cpp  cxxbase.h
tests/: CMakeLists.txt  logging_tests.cpp
